--- a/index.html
+++ b/index.html
@@ -960,7 +960,7 @@
   <!-- 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="assets/slick/slick.min.js"></script> -->
-  <script src="../dist/bundle.js"></script>
+  <script src="/dist/bundle.js"></script>
 </body>
 
 </html>
